--- a/project/project.vcxproj.filters
+++ b/project/project.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="project.cpp">
+    <ClCompile Include="pwgen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
