Restructured program to allow further expansion in functions, added gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/project/project.vcxproj.filters
+/project/project.vcxproj
